--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -11,10 +11,16 @@
         <div class="row">
             <h1>List of Services</h1>
         </div>
+
+        <div class="row">
+            <div class="col-lg-3">
+                <a th:href="@{/services/new}" class="btn btn-primary btn-sm mb-3">Add Service</a>
+            </div>
+        </div>
+
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
                 <tr>
-                    <th>Nickname</th>
                     <th>Title</th>
                     <th>Description</th>
                     <th>Price</th>
@@ -22,7 +28,6 @@
             </thead>
             <tbody>
                 <tr th:each = "service: ${services}">
-                    <td th:text = "${service.user.nickname}"></td>
                     <td th:text = "${service.title}"></td>
                     <td th:text = "${service.description}"></td>
                     <td th:text = "${service.price}"></td>
