Implemented update service feature

--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -41,6 +41,7 @@
                     <th>Title</th>
                     <th>Description</th>
                     <th>Price</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -48,6 +49,9 @@
                     <td th:text = "${service.title}"></td>
                     <td th:text = "${service.description}"></td>
                     <td th:text = "${service.price}"></td>
+                    <td>
+                        <a th:href="@{/services/edit/{id}(id=${service.id})}" class="btn btn-primary">Update</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
