--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <title>Your Services</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script th:inline="javascript">
+        function confirmDelete(url) {
+            if (confirm("Are you sure you want to delete this service?")) {
+                window.location.href = url + '?deleted=true';
+            }
+        }
+
+        // Function to close success message after delay
+        function closeSuccessMessage() {
+            var alert = document.querySelector('.alert');
+            if (alert) {
+                window.setTimeout(function() {
+                    alert.classList.add('fade');
+                    alert.classList.remove('show');
+                }, 3000); // Adjust delay (in milliseconds) as needed
+            }
+        }
+
+        // Close success message on page load
+        document.addEventListener('DOMContentLoaded', function() {
+            closeSuccessMessage();
+        });
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
     <a class="navbar-brand" href="#">Your Services</a>
 
-    <!-- Toggler/collapsibe Button -->
+    <!-- Toggler/collapsible Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,38 +47,52 @@
         </ul>
     </div>
 </nav>
-    <div class="container">
-        <div class="row">
-            <h1>List of Services</h1>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-3">
-                <a th:href="@{/services/new}" class="btn btn-primary btn-sm mb-3">Add Service</a>
-            </div>
-        </div>
-
-        <table class="table table-striped table-bordered">
-            <thead class="table-dark">
-                <tr>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Price</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each = "service: ${services}">
-                    <td th:text = "${service.title}"></td>
-                    <td th:text = "${service.description}"></td>
-                    <td th:text = "${service.price}"></td>
-                    <td>
-                        <a th:href="@{/services/edit/{id}(id=${service.id})}" class="btn btn-primary">Update</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+<div class="container">
+    <div class="row">
+        <h1>List of Services</h1>
     </div>
+
+    <!-- Success message banner -->
+    <div th:if="${param.deleted}" class="alert alert-success alert-dismissible fade show" role="alert">
+        Service successfully deleted!
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-3">
+            <a th:href="@{/services/new}" class="btn btn-primary btn-sm mb-3">Add Service</a>
+        </div>
+    </div>
+
+    <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="service: ${services}">
+            <td th:text="${service.title}"></td>
+            <td th:text="${service.description}"></td>
+            <td th:text="${service.price}"></td>
+            <td>
+                <a th:href="@{/services/edit/{id}(id=${service.id})}" class="btn btn-primary">Update</a>
+                <a href="#" th:attr="onclick='confirmDelete(\'' + @{/services/{id}(id=${service.id})} + '\')'" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<script th:inline="javascript">
+    // Call function to close success message after delay
+    closeSuccessMessage();
+</script>
 
 </body>
 </html>
